--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -10,6 +10,7 @@ const navItems: Array<NavItem> = [
   { title: "About Us", url: "/#about-us" },
   { title: "History", url: "/#history" },
   { title: "Our Mission", url: "/#our-mission" },
+  { title: "Volunteer", url: "/volunteer" },
 ];
 ---
 
