--- a/src/components/sections/DonationReceived.astro
+++ b/src/components/sections/DonationReceived.astro
@@ -7,9 +7,7 @@ import HomeButton from "@/components/HomeButton.astro";
 import waterFountain from "@/assets/images/Dublin-Corner-Lot-3.avif";
 ---
 
-<section
-  class="flex scroll-mt-24 flex-col items-center gap-4 space-y-8 px-8 py-48"
->
+<section class="flex flex-col items-center gap-4 space-y-8 px-8 py-4">
   <Icon name="donation-heart" class="text-foreground size-36" />
   <div class="flex flex-col items-center gap-4">
     <h2
@@ -27,7 +25,7 @@ import waterFountain from "@/assets/images/Dublin-Corner-Lot-3.avif";
     deductible expenses as we are a 501 (c) (3) non-profit organization.
     <br />Our EIN is: 75-2784640
   </p>
-  <div class="grid max-w-screen-xl items-center gap-8 xl:grid-cols-2">
+  <div class="grid max-w-7xl items-center gap-8 xl:grid-cols-2">
     <div class="w-full">
       <Image
         class="border-border w-full border-8"
