--- a/src/components/sections/SectionMission.astro
+++ b/src/components/sections/SectionMission.astro
@@ -2,6 +2,7 @@
 import { Image } from "astro:assets";
 import ContentSection from "@/components/ContentSection.astro";
 import DonateButton from "@/components/DonateButton.astro";
+import VolunteerButton from "@/components/VolunteerButton.astro";
 
 // Import images
 import imgTall from "@/assets/images/Dublin-Corner-Lot-4.avif";
@@ -56,11 +57,11 @@ import img6 from "@/assets/images/Dublin-Corner-Lot-10.avif";
         hands to help. Get involved today in helping maintain the Corner Lot!
       </p>
       <div class="mx-auto w-fit">
-        <DonateButton />
+        <VolunteerButton />
       </div>
     </div>
   </div>
-  <div class="grid max-w-screen-xl items-center gap-8 xl:grid-cols-3">
+  <div class="grid max-w-7xl items-center gap-8 xl:grid-cols-3">
     <div class="w-full">
       <Image
         class="border-border w-full border-2"
