--- a/src/components/starwind/button/Button.astro
+++ b/src/components/starwind/button/Button.astro
@@ -22,9 +22,9 @@ const button = tv({
       default:
         "bg-foreground text-primary-foreground hover:bg-foreground/90 border-border border-2 focus-visible:outline-outline",
       primary:
-        "bg-primary text-primary-foreground hover:bg-primary/90 focus-visible:outline-primary",
+        "bg-primary text-primary-foreground border-2 hover:bg-primary/90 focus-visible:outline-primary",
       secondary:
-        "bg-secondary text-secondary-foreground hover:bg-secondary/90 focus-visible:outline-secondary",
+        "bg-secondary text-secondary-foreground border-2 hover:bg-secondary/90 focus-visible:outline-secondary",
       outline:
         "border-border hover:bg-border hover:text-foreground focus-visible:outline-outline border",
       ghost:
