--- a/src/components/ContentSection.astro
+++ b/src/components/ContentSection.astro
@@ -9,12 +9,12 @@ const { title, id } = Astro.props;
 
 <section
   id={id}
-  class="mx-auto flex max-w-screen-xl scroll-mt-24 flex-col items-center gap-4 space-y-8"
+  class="mx-auto flex max-w-7xl scroll-mt-40 flex-col items-center gap-4 space-y-8"
 >
   <div class="flex flex-col items-center gap-4">
     <slot name="above-icon" />
     <h2
-      class="gradient-text text-center text-4xl font-black md:text-6xl md:leading-[1.25]"
+      class="gradient-text text-center text-4xl font-black md:text-6xl md:leading-tight"
     >
       {title}
     </h2>
