Updated Email Template
- Updated to use a custom HTML email template in the Astro Action Resend integration

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,6 +1,6 @@
 ---
 import Meta from "@/layouts/Meta.astro";
-import { SITE } from "@/data/siteConfig";
+import { SITE } from "@/lib/siteConfig";
 import Header from "@/components/Header.astro";
 import Footer from "@/components/Footer.astro";
 import BackToTopButton from "@/components/BackToTopButton.astro";
