--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -2,7 +2,7 @@
 import BaseLayout from "@/layouts/BaseLayout.astro";
 import HomeButton from "@/components/HomeButton.astro";
 import { Icon } from "astro-icon/components";
-import { SITE } from "@/data/siteConfig";
+import { SITE } from "@/lib/siteConfig";
 
 const pageTitle: string = `Page Not Found | ${SITE.title}`;
 ---
