--- a/src/pages/donate.astro
+++ b/src/pages/donate.astro
@@ -9,7 +9,7 @@ import {
 } from "@/components/starwind/card";
 import { Button } from "@/components/starwind/button";
 import { Icon } from "astro-icon/components";
-import { SITE } from "@/data/siteConfig";
+import { SITE } from "@/lib/siteConfig";
 import VolunteerButton from "@/components/VolunteerButton.astro";
 
 const pageTitle: string = `Donate Now | ${SITE.title}`;
