--- a/src/pages/volunteer/submission-received.astro
+++ b/src/pages/volunteer/submission-received.astro
@@ -1,6 +1,6 @@
 ---
 import BaseLayout from "@/layouts/BaseLayout.astro";
-import { SITE } from "@/data/siteConfig";
+import { SITE } from "@/lib/siteConfig";
 import HomeButton from "@/components/HomeButton.astro";
 import { Icon } from "astro-icon/components";
 
