--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -3,7 +3,7 @@ import { Icon } from "astro-icon/components";
 import ThemeSwitcher from "@/components/ThemeSwitcher.astro";
 import Logo from "@/components/Logo.astro";
 import { Button } from "@/components/starwind/button";
-import type { NavItem } from "@/types";
+import type { NavItem } from "@/lib/types";
 
 // Define array of menu items
 const navItems: Array<NavItem> = [
