--- a/src/layouts/Meta.astro
+++ b/src/layouts/Meta.astro
@@ -1,6 +1,6 @@
 ---
 import { getImage } from "astro:assets";
-import { OG, SEO, SITE } from "@/data/siteConfig";
+import { OG, SEO, SITE } from "@/lib/siteConfig";
 import faviconSvgSrc from "@/assets/images/favicon/favicon.svg";
 import faviconSrc from "@/assets/images/favicon/icon-maskable.png";
 import { join } from "path";
