--- a/src/pages/thank-you-for-donating.astro
+++ b/src/pages/thank-you-for-donating.astro
@@ -1,7 +1,7 @@
 ---
 import BaseLayout from "@/layouts/BaseLayout.astro";
 import Donation from "@/components/sections/DonationReceived.astro";
-import { SITE } from "@/data/siteConfig";
+import { SITE } from "@/lib/siteConfig";
 
 const pageTitle: string = `Thank You for Donating | ${SITE.title}`;
 ---
