Updated Astro Deps and Migrate to Biome
- Updated Astro to 5.15.9
- Deps updated
- Migrated from ESLint and Prettier to Biome Linter

--- a/src/components/BackToTopButton.astro
+++ b/src/components/BackToTopButton.astro
@@ -11,7 +11,7 @@ import { Icon } from "astro-icon/components";
 </button>
 
 <script>
-  document.addEventListener("DOMContentLoaded", function () {
+  document.addEventListener("DOMContentLoaded", () => {
     const backToTopButton = document.getElementById("back-to-top");
 
     function toggleBackToTopButton() {
