--- a/src/components/starwind/select/SelectGroup.astro
+++ b/src/components/starwind/select/SelectGroup.astro
@@ -1,8 +1,5 @@
 ---
-/**
- * This current doesn't do anything
- */
-
+// biome-ignore lint: allow-suspicious-any
 type Props = { children: any };
 ---
 
