--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,224 +1,225 @@
 @import "tailwindcss";
 @import "tw-animate-css";
-@plugin "@tailwindcss/forms";
 @import "@/styles/lenis.css";
 
-@variant dark (&:where(.dark, .dark *));
+@plugin "@tailwindcss/forms";
+
+@custom-variant dark (&:where(.dark, .dark *));
 
 @theme inline {
-  /* Font Family */
-  --default-font-family: "Avenir", system-ui, -apple-system, sans-serif;
+	/* Font Family */
+	--default-font-family: "Avenir", system-ui, -apple-system, sans-serif;
 
-  /* Color Palette */
-  --color-green-50: oklch(96.76% 0.0196 143.04);
-  --color-green-100: oklch(93.64% 0.0378 142.84);
-  --color-green-200: oklch(87.46% 0.0757 142.03);
-  --color-green-300: oklch(81.43% 0.1124 141.99);
-  --color-green-400: oklch(75.61% 0.1485 141.63);
-  --color-green-500: oklch(70.1% 0.1787 141.59);
-  --color-green-600: oklch(59.53% 0.1502 141.52);
-  --color-green-700: oklch(48.47% 0.1193 141.66);
-  --color-green-800: oklch(36.73% 0.0871 141.56);
-  --color-green-900: oklch(23.97% 0.05 142.08);
+	/* Color Palette */
+	--color-green-50: oklch(96.76% 0.0196 143.04);
+	--color-green-100: oklch(93.64% 0.0378 142.84);
+	--color-green-200: oklch(87.46% 0.0757 142.03);
+	--color-green-300: oklch(81.43% 0.1124 141.99);
+	--color-green-400: oklch(75.61% 0.1485 141.63);
+	--color-green-500: oklch(70.1% 0.1787 141.59);
+	--color-green-600: oklch(59.53% 0.1502 141.52);
+	--color-green-700: oklch(48.47% 0.1193 141.66);
+	--color-green-800: oklch(36.73% 0.0871 141.56);
+	--color-green-900: oklch(23.97% 0.05 142.08);
 
-  --color-gold-50: oklch(98.37% 0.0267 95.33);
-  --color-gold-100: oklch(96.8% 0.0529 95.58);
-  --color-gold-200: oklch(94.05% 0.1027 96.55);
-  --color-gold-300: oklch(91.59% 0.1438 96.49);
-  --color-gold-400: oklch(89.41% 0.1707 95.37);
-  --color-gold-500: oklch(87.5% 0.1785 92.61);
-  --color-gold-600: oklch(74.02% 0.1509 92.75);
-  --color-gold-700: oklch(59.88% 0.1219 92.97);
-  --color-gold-800: oklch(44.85% 0.091 93.37);
-  --color-gold-900: oklch(36.79% 0.0748 94.37);
+	--color-gold-50: oklch(98.37% 0.0267 95.33);
+	--color-gold-100: oklch(96.8% 0.0529 95.58);
+	--color-gold-200: oklch(94.05% 0.1027 96.55);
+	--color-gold-300: oklch(91.59% 0.1438 96.49);
+	--color-gold-400: oklch(89.41% 0.1707 95.37);
+	--color-gold-500: oklch(87.5% 0.1785 92.61);
+	--color-gold-600: oklch(74.02% 0.1509 92.75);
+	--color-gold-700: oklch(59.88% 0.1219 92.97);
+	--color-gold-800: oklch(44.85% 0.091 93.37);
+	--color-gold-900: oklch(36.79% 0.0748 94.37);
 
-  --color-blue-50: oklch(97.09% 0.0153 222.68);
-  --color-blue-100: oklch(94.22% 0.0305 222.88);
-  --color-blue-200: oklch(88.85% 0.0602 221.9);
-  --color-blue-300: oklch(83.62% 0.0875 224.47);
-  --color-blue-400: oklch(78.87% 0.1113 225.29);
-  --color-blue-500: oklch(74.64% 0.1298 228.05);
-  --color-blue-600: oklch(63.17% 0.1088 227.72);
-  --color-blue-700: oklch(51.23% 0.087 228.22);
-  --color-blue-800: oklch(38.75% 0.0629 226.03);
-  --color-blue-900: oklch(32.07% 0.0505 227.17);
+	--color-blue-50: oklch(97.09% 0.0153 222.68);
+	--color-blue-100: oklch(94.22% 0.0305 222.88);
+	--color-blue-200: oklch(88.85% 0.0602 221.9);
+	--color-blue-300: oklch(83.62% 0.0875 224.47);
+	--color-blue-400: oklch(78.87% 0.1113 225.29);
+	--color-blue-500: oklch(74.64% 0.1298 228.05);
+	--color-blue-600: oklch(63.17% 0.1088 227.72);
+	--color-blue-700: oklch(51.23% 0.087 228.22);
+	--color-blue-800: oklch(38.75% 0.0629 226.03);
+	--color-blue-900: oklch(32.07% 0.0505 227.17);
 
-  --color-current: currentColor;
-  --color-background: var(--background);
-  --color-default: var(--default);
-  --color-offset: var(--offset);
-  --color-foreground: var(--foreground);
-  --color-card: var(--card);
-  --color-card-foreground: var(--card-foreground);
-  --color-popover: var(--popover);
-  --color-popover-foreground: var(--popover-foreground);
-  --color-primary: var(--primary);
-  --color-primary-foreground: var(--primary-foreground);
-  --color-secondary: var(--secondary);
-  --color-secondary-foreground: var(--secondary-foreground);
-  --color-muted: var(--muted);
-  --color-muted-foreground: var(--muted-foreground);
-  --color-accent: var(--accent);
-  --color-accent-foreground: var(--accent-foreground);
-  --color-info: var(--info);
-  --color-info-foreground: var(--info-foreground);
-  --color-success: var(--success);
-  --color-success-foreground: var(--success-foreground);
-  --color-warning: var(--warning);
-  --color-warning-foreground: var(--warning-foreground);
-  --color-error: var(--error);
-  --color-error-foreground: var(--error-foreground);
-  --color-border: var(--border);
-  --color-input: var(--input);
-  --color-outline: var(--outline);
+	--color-current: currentColor;
+	--color-background: var(--background);
+	--color-default: var(--default);
+	--color-offset: var(--offset);
+	--color-foreground: var(--foreground);
+	--color-card: var(--card);
+	--color-card-foreground: var(--card-foreground);
+	--color-popover: var(--popover);
+	--color-popover-foreground: var(--popover-foreground);
+	--color-primary: var(--primary);
+	--color-primary-foreground: var(--primary-foreground);
+	--color-secondary: var(--secondary);
+	--color-secondary-foreground: var(--secondary-foreground);
+	--color-muted: var(--muted);
+	--color-muted-foreground: var(--muted-foreground);
+	--color-accent: var(--accent);
+	--color-accent-foreground: var(--accent-foreground);
+	--color-info: var(--info);
+	--color-info-foreground: var(--info-foreground);
+	--color-success: var(--success);
+	--color-success-foreground: var(--success-foreground);
+	--color-warning: var(--warning);
+	--color-warning-foreground: var(--warning-foreground);
+	--color-error: var(--error);
+	--color-error-foreground: var(--error-foreground);
+	--color-border: var(--border);
+	--color-input: var(--input);
+	--color-outline: var(--outline);
 
-  /* Animations */
-  @keyframes fade-in {
-    0% {
-      opacity: 0;
-    }
-    100% {
-      opacity: 1;
-    }
-  }
-  --animate-fade-in: fade-in 4s cubic-bezier(0.32, 0, 0.67, 0);
+	/* Animations */
+	@keyframes fade-in {
+		0% {
+			opacity: 0;
+		}
+		100% {
+			opacity: 1;
+		}
+	}
+	--animate-fade-in: fade-in 4s cubic-bezier(0.32, 0, 0.67, 0);
 
-  @keyframes accordion-down {
-    from {
-      height: 0;
-    }
-    to {
-      height: var(--starwind-accordion-content-height);
-    }
-  }
-  --animate-accordion-down: accordion-down 0.2s ease-out;
+	@keyframes accordion-down {
+		from {
+			height: 0;
+		}
+		to {
+			height: var(--starwind-accordion-content-height);
+		}
+	}
+	--animate-accordion-down: accordion-down 0.2s ease-out;
 
-  @keyframes accordion-up {
-    from {
-      height: var(--starwind-accordion-content-height);
-    }
-    to {
-      height: 0;
-    }
-  }
-  --animate-accordion-up: accordion-up 0.2s ease-out;
+	@keyframes accordion-up {
+		from {
+			height: var(--starwind-accordion-content-height);
+		}
+		to {
+			height: 0;
+		}
+	}
+	--animate-accordion-up: accordion-up 0.2s ease-out;
 }
 
 @layer base {
-  :root {
-    --background: var(--color-green-100);
-    --default: var(--color-stone-950);
-    --offset: var(--color-green-200);
-    --foreground: var(--color-green-700);
-    --card: var(--color-green-50);
-    --card-foreground: var(--color-stone-950);
-    --popover: var(--color-stone-50);
-    --popover-foreground: var(--color-stone-950);
-    --primary: var(--color-blue-600);
-    --primary-foreground: var(--color-stone-50);
-    --secondary: var(--color-fuchsia-700);
-    --secondary-foreground: var(--color-stone-50);
-    --muted: var(--color-stone-100);
-    --muted-foreground: var(--color-stone-600);
-    --accent: var(--color-gold-600);
-    --accent-foreground: var(--color-stone-900);
-    --info: var(--color-blue-300);
-    --info-foreground: var(--color-blue-950);
-    --success: var(--color-green-600);
-    --success-foreground: var(--color-green-950);
-    --warning: var(--color-amber-300);
-    --warning-foreground: var(--color-amber-950);
-    --error: var(--color-red-700);
-    --error-foreground: var(--color-stone-50);
-    --border: var(--color-green-400);
-    --input: var(--color-stone-100);
-    --outline: var(--color-blue-600);
-  }
+	:root {
+		--background: var(--color-green-100);
+		--default: var(--color-stone-950);
+		--offset: var(--color-green-200);
+		--foreground: var(--color-green-700);
+		--card: var(--color-green-50);
+		--card-foreground: var(--color-stone-950);
+		--popover: var(--color-stone-50);
+		--popover-foreground: var(--color-stone-950);
+		--primary: var(--color-blue-600);
+		--primary-foreground: var(--color-stone-50);
+		--secondary: var(--color-fuchsia-700);
+		--secondary-foreground: var(--color-stone-50);
+		--muted: var(--color-stone-100);
+		--muted-foreground: var(--color-stone-600);
+		--accent: var(--color-gold-600);
+		--accent-foreground: var(--color-stone-900);
+		--info: var(--color-blue-300);
+		--info-foreground: var(--color-blue-950);
+		--success: var(--color-green-600);
+		--success-foreground: var(--color-green-950);
+		--warning: var(--color-amber-300);
+		--warning-foreground: var(--color-amber-950);
+		--error: var(--color-red-700);
+		--error-foreground: var(--color-stone-50);
+		--border: var(--color-green-400);
+		--input: var(--color-stone-100);
+		--outline: var(--color-blue-600);
+	}
 
-  .dark {
-    --background: var(--color-green-900);
-    --default: var(--color-stone-100);
-    --offset: var(--color-green-800);
-    --foreground: var(--color-green-600);
-    --card: var(--color-green-800);
-    --card-foreground: var(--color-stone-50);
-    --popover: var(--color-stone-950);
-    --popover-foreground: var(--color-stone-50);
-    --primary: var(--color-blue-500);
-    --primary-foreground: var(--color-stone-50);
-    --secondary: var(--color-fuchsia-300);
-    --secondary-foreground: var(--color-stone-950);
-    --muted: var(--color-stone-900);
-    --muted-foreground: var(--color-stone-300);
-    --accent: var(--color-gold-500);
-    --accent-foreground: var(--color-stone-100);
-    --info: var(--color-blue-300);
-    --info-foreground: var(--color-blue-950);
-    --success: var(--color-green-400);
-    --success-foreground: var(--color-green-950);
-    --warning: var(--color-amber-300);
-    --warning-foreground: var(--color-amber-950);
-    --error: var(--color-red-800);
-    --error-foreground: var(--color-stone-50);
-    --border: var(--color-green-500);
-    --input: var(--color-stone-700);
-    --outline: var(--color-blue-600);
-  }
+	.dark {
+		--background: var(--color-green-900);
+		--default: var(--color-stone-100);
+		--offset: var(--color-green-800);
+		--foreground: var(--color-green-600);
+		--card: var(--color-green-800);
+		--card-foreground: var(--color-stone-50);
+		--popover: var(--color-stone-950);
+		--popover-foreground: var(--color-stone-50);
+		--primary: var(--color-blue-500);
+		--primary-foreground: var(--color-stone-50);
+		--secondary: var(--color-fuchsia-300);
+		--secondary-foreground: var(--color-stone-950);
+		--muted: var(--color-stone-900);
+		--muted-foreground: var(--color-stone-300);
+		--accent: var(--color-gold-500);
+		--accent-foreground: var(--color-stone-100);
+		--info: var(--color-blue-300);
+		--info-foreground: var(--color-blue-950);
+		--success: var(--color-green-400);
+		--success-foreground: var(--color-green-950);
+		--warning: var(--color-amber-300);
+		--warning-foreground: var(--color-amber-950);
+		--error: var(--color-red-800);
+		--error-foreground: var(--color-stone-50);
+		--border: var(--color-green-500);
+		--input: var(--color-stone-700);
+		--outline: var(--color-blue-600);
+	}
 
-  * {
-    @apply border-border;
-  }
-  *:focus-visible {
-    @apply outline-outline;
-  }
-  html {
-    @apply scheme-light dark:scheme-dark;
-  }
-  button {
-    @apply cursor-pointer;
-  }
+	* {
+		@apply border-border;
+	}
+	*:focus-visible {
+		@apply outline-outline;
+	}
+	html {
+		@apply scheme-light dark:scheme-dark;
+	}
+	button {
+		@apply cursor-pointer;
+	}
 }
 
 @layer utilities {
-  /* transition-colors but without outline-color transition property */
-  .starwind-transition-colors {
-    transition-property:
-      color, background-color, border-color, text-decoration-color, fill,
-      stroke, --tw-gradient-from, --tw-gradient-via, --tw-gradient-to;
-    transition-timing-function: var(--default-transition-timing-function);
-    transition-duration: var(--default-transition-duration);
-  }
+	/* transition-colors but without outline-color transition property */
+	.starwind-transition-colors {
+		transition-property:
+			color, background-color, border-color, text-decoration-color, fill, stroke,
+			--tw-gradient-from, --tw-gradient-via, --tw-gradient-to;
+		transition-timing-function: var(--default-transition-timing-function);
+		transition-duration: var(--default-transition-duration);
+	}
 }
 
 /* Custom components */
 @layer components {
-  a,
-  .btn {
-    transition: color 200ms;
-    &:hover {
-      color: var(--color-secondary);
-    }
-    &:focus {
-      outline: none;
-      box-shadow: 0 0 0 2px var(--color-secondary);
-    }
-  }
+	a,
+	.btn {
+		transition: color 200ms;
+		&:hover {
+			color: var(--color-secondary);
+		}
+		&:focus {
+			outline: none;
+			box-shadow: 0 0 0 2px var(--color-secondary);
+		}
+	}
 
-  .gradient-text {
-    background-clip: text;
-    color: transparent;
-    background-image: linear-gradient(
-      to bottom right,
-      var(--color-gold-500),
-      var(--color-green-500),
-      var(--color-blue-500)
-    );
-  }
+	.gradient-text {
+		background-clip: text;
+		color: transparent;
+		background-image: linear-gradient(
+			to bottom right,
+			var(--color-gold-500),
+			var(--color-green-500),
+			var(--color-blue-500)
+		);
+	}
 
-  .scrollbar-hide {
-    scrollbar-width: none;
-    &::-webkit-scrollbar {
-      display: none;
-    }
-  }
+	.scrollbar-hide {
+		scrollbar-width: none;
+		&::-webkit-scrollbar {
+			display: none;
+		}
+	}
 }
